--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Hola Mundo</title>
 </head>
 <body>
+    <h1>Bienvenidos</h1>
     <p>Hola mundo, Hello word</p>
     <p>Hasta el infinito y más alla</p>
 </body>
